docs: update swagger documentation and product documentation, refactor api routes
